infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
  labels:
    app: product
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: sokolozen/product
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
