infra/k8s/stock-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-depl
  labels:
    app: stock
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: stock
  template:
    metadata:
      labels:
        app: stock
    spec:
      containers:
        - name: stock
          image: sokolozen/stock
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: stock-srv
spec:
  selector:
    app: stock
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
