infra/k8s/structure-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: structure-depl
  labels:
    app: structure
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: structure
  template:
    metadata:
      labels:
        app: structure
    spec:
      containers:
        - name: structure
          image: sokolozen/structure
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: structure-srv
spec:
  selector:
    app: structure
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
